objects/Priority_Account__c.object
<CustomObject>
    <description>Object to track Priority + Named Account time frames so that we can report historically on when an account fell into one of these buckets</description>
    <label>Priority Account</label>
    <nameField>
        <displayFormat>PA-{00000}</displayFormat>
        <label>Priority Account Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Priority Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Account__c</fullName>
        <description>Field that ties the Priority or Named Account to the Priority Account record. Master-Detail so there can be roll-ups to the account.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Priority Account</relationshipLabel>
        <relationshipName>Priority_Account</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>Field that captured the end date of the campaign</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Field that captured the start date of the campaign</description>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Priority_Account__c</fullName>
        <description>Field that captures the name of the targeted list, either P1 or P2 with some additional details around the target</description>
        <label>Priority Account</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>P1 Sales Targets</fullName>
                </value>
                <value>
                    <fullName>P2 Digital Transformation</fullName>
                </value>
                <value>
                    <fullName>P1 Strategic Accounts</fullName>
                </value>
                <value>
                    <fullName>P2 Jira Accounts</fullName>
                </value>
                <value>
                    <fullName>P2 Digital-First Healthcare</fullName>
                </value>
                <value>
                    <fullName>P2 Traditional Healthcare</fullName>
                </value>
                <value>
                    <fullName>P2 Finance</fullName>
                </value>
                <value>
                    <fullName>P3 ICP Experiment - Prospects</fullName>
                </value>
                <value>
                    <fullName>P3 ICP Experiment - Customers</fullName>
                </value>
                <value>
                    <fullName>P3 ICP Experiment - Dupes?</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X6sense_Segment_Name__c</fullName>
        <description>Field to capture the segment for the list in 6sense so that the record and the list can easily be tied back to each other.</description>
        <label>6sense Segment Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_Priority_Account__c</fullName>
        <description>Field that returns TRUE/FALSE based on the start and end dates of the Priority Account record.</description>
        <formula>IF(
AND(
NOT(ISBLANK( Start_Date__c )),
OR(ISBLANK(End_Date__c),
End_Date__c &gt;= Today())), TRUE, FALSE)</formula>
        <label>Active Priority Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Priority_Account_To_End__c</fullName>
        <description>Field to help us easily target Priority Account records that need to have an End Date Stamped when new Priority Accounts are loaded.</description>
        <formula>AND( TEXT(Priority_Account__c) &lt;&gt;  TEXT(Account__r.Priority_Account__c) ,
 Active_Priority_Account__c = TRUE)</formula>
        <label>Priority Account To End</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_s_Priority_Account_Value__c</fullName>
        <description>Field used to compare the account&apos;s priority value to the priority account record so that we can easily target ending campaigns</description>
        <formula>TEXT(Account__r.Priority_Account__c)</formula>
        <label>Account&apos;s Priority Account Value</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>Priority_Accounts_All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Priority_Account__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Active_Priority_Account__c</columns>
        <filterScope>Everything</filterScope>
        <label>1. Priority Accounts - All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Priority_Accounts_Active</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Priority_Account__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Active_Priority_Account__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active_Priority_Account__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>2. Priority Accounts - Active</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Priority_Accounts_Inactive</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Priority_Account__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Active_Priority_Account__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active_Priority_Account__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>3. Priority Accounts - Inactive</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>SOPS_Priority_Accounts_to_End</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Priority_Account__c</columns>
        <columns>Account_s_Priority_Account_Value__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Active_Priority_Account__c</columns>
        <columns>Priority_Account_To_End__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active_Priority_Account__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Priority_Account_To_End__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>!SOPS - Priority Accounts to End</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Priority_Accounts_April_May_2022</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Priority_Account__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Active_Priority_Account__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Start_Date__c</field>
            <operation>lessThan</operation>
            <value>8/1/2022</value>
        </filters>
        <label>Priority Accounts - April + May 2022</label>
        <language>en_US</language>
    </listViews>
</CustomObject>